--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.511.0",
     "motion": "^12.23.22",
     "notistack": "^3.0.2",
